AV2 Changelog :: version a4.0

+ Ability Level System
+ New skills menu
+ Scrolls item
+ Level IV options for each ability

* Remove small space between radial segment hover
* Abilities have multiple levels + xp instead of only 1 XP bar
* Adjusted xp curves based on level
* Generally triple xp gains to account for levels
* Airblade and airgust, by default, have less push
* Airblade can chop flowers, etc. at level II
* Waterbenders have infinite water arcs when it rains on them
* Greatly increased XP gains for Mine Blocks ability
* Vanilla mobs have rare chances of dropping scrolls
* Can use [keybinding=key.X] in .lang file to use a keybinding
* Can get water arcs from cauldrons
* Option in cosmetic.yml to use vanilla instead of avatar particles
* New chi bar textures from MadWrist
* Chi bar is semitransparent (configurable in cosmetic.yml)
* More realistic water-skate movement; can control with wasd
* Water skating is quieter
* Refactored networking code to be simpler & more secure
* Refactored controls code to be simpler

> Fix airblade weird angles
> Fix flamethrower not aggroing mobs
> Fix some entities can be set on fire(like airblade)
> Fix grass path not bendable
> Fix water arc breaking when hit a block while under player control
> Fix airjump and other status controls can be activated while in chat or other GUIs
> Allow rebinding of jump key on airjump

- Removed progression points
- Internal: removed bending states